--- a/pages/api-reference/authentication.mdx
+++ b/pages/api-reference/authentication.mdx
@@ -15,6 +15,10 @@ Authorization: Basic encoded({ClientId:clientSecret})
   "refresh_token": "{refreshToken}"
 }
 ```
+
+### Method 
+`POST`
+
 ### Headers
 
 - **Content-Type**: `application/json`
