--- a/pages/api-reference/caminvoice-member-detail.mdx
+++ b/pages/api-reference/caminvoice-member-detail.mdx
@@ -9,9 +9,12 @@ GET {BaseURL}/api/v1/businesses/{moc_id}
 Content-Type: application/json
 Authorization: Bearer {access_token}
 ```
+### Method 
+`GET`
 
-### Authentication
-Bearer token authentication is required with the access token provided.
+### Headers
+- **Content-Type**: `application/json`
+- **Authorization**: `Bearer {access_token}`
 
 ### Path Parameters
 
