--- a/pages/api-reference/caminvoice-member-list.mdx
+++ b/pages/api-reference/caminvoice-member-list.mdx
@@ -9,6 +9,9 @@ Content-Type: application/json
 Authorization: "Bearer {access_token}"
 ```
 
+### Method 
+`GET`
+
 ### Headers
 - **Content-Type**: `application/json`
 - **Authorization**: `Bearer {access_token}`
