--- a/pages/api-reference/reject-document.mdx
+++ b/pages/api-reference/reject-document.mdx
@@ -1,12 +1,12 @@
-# Reject cancelled_documents
+# Reject Documents
 
 ## Description
-This endpoint is used to accept document from customer.
+This endpoint is used to reject documents from customers.
 
 ```http
-POST {BaseURL}/api/v1/docoument/reject
+POST {BaseURL}/api/v1/document/reject
 Content-Type: application/json
-Authorization: "Bearer ${access_token}"
+Authorization: Bearer {access_token}
 {
     "document_ids": [
         "df5dcf78-e78b-4396-87bb-2d2a44c1302e",
@@ -15,16 +15,24 @@ Authorization: "Bearer ${access_token}"
     ]
 }
 ```
-## Authentication
-Bearer token authentication is required with the access token provided.
 
-## Request Body
-| Field            | Type    | Description                                         |
-|------------------|---------|-----------------------------------------------------|
-| document_ids        | string[]  | list of accepted document id|
+### Method 
+`POST`
+
+### Headers
+- **Content-Type**: `application/json`
+- **Authorization**: `Bearer {access_token}`
+
+
+### Request Parameters
+
+| Field         | Type     | Description                          | Required |
+|---------------|----------|--------------------------------------|----------|
+| `document_ids`| string[] | List of document IDs to be rejected. | Yes      |
 
 ### Example Request Body
-```json 
+
+```json
 {
     "document_ids": [
         "df5dcf78-e78b-4396-87bb-2d2a44c1302e",
@@ -33,20 +41,16 @@ Bearer token authentication is required with the access token provided.
     ]
 }
 ```
-## Response
 
-### HTTP Status 200 (OK)
-| Field   | Description                                    |
-|---------|------------------------------------------------|
-| rejected_documents | list of document id that rejected |
-| failed_documents | list failure document with the failure message |
+### Response
 
-### Example
-```json 
+**HTTP Status 200 (OK)**
+
+```json
 {
     "rejected_documents": [
         "df5dcf78-e78b-4396-87bb-2d2a44c1302e",
-        "33444323-e78b-4396-87bb-234232344423",
+        "33444323-e78b-4396-87bb-234232344423"
     ],
     "failed_documents": [
         {
@@ -55,7 +59,19 @@ Bearer token authentication is required with the access token provided.
         }
     ]
 }
-
 ```
-### HTTP Status 422 (Unprocessable Entity)
-This response occurs when the provided data are missing
+
+**Response Fields**
+
+| Field               | Description                                                |
+|---------------------|------------------------------------------------------------|
+| `rejected_documents`| List of document IDs that were successfully rejected.      |
+| `failed_documents`  | List of documents that failed to be rejected, with failure messages. |
+
+**HTTP Status 422 (Unprocessable Entity)**
+
+This response occurs when the provided data is missing or invalid.
+
+### Notes
+- Ensure the request body contains all required fields for document rejection.
+- The endpoint returns lists of rejected and failed documents, along with any failure messages.
