--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,7 +16,7 @@ This technical documentation provides all the necessary information needed to in
 - [Receive Update Event](./receive-update-event): Information on how to configure and use webhooks for receiving notifications.
 - [Document Type](./data-type/document-type): Details on the various document types supported by CamInvoice.
 
-## How it works
+## How It Works
 
 ![](./workflow.png)
 
