--- a/pages/api-reference/validate-taxpayer.mdx
+++ b/pages/api-reference/validate-taxpayer.mdx
@@ -15,24 +15,26 @@ Authorization: Bearer {access_token}
 }
 ```
 
-## Method
+### Method 
 `POST`
 
-## Authentication
-Bearer token authentication is required with the access token provided.
+### Headers
+- **Content-Type**: `application/json`
+- **Authorization**: `Bearer {access_token}`
 
-## Request Body
 
-| Field           | Type   | Description                                     | Required |
-|-----------------|--------|-------------------------------------------------|----------|
-| `single_id`     | String | The single ID of the taxpayer.                  | Yes      |
-| `tin`           | String | The taxpayer identification number (TIN).       | Yes      |
-| `company_name_en`| String | The company name in English.                    | Yes      |
-| `company_name_kh`| String | The company name in Khmer (Cambodian language). | Yes      |
+### Request Parameters
 
-## Responses
+| Field              | Type   | Description                                     | Required |
+|--------------------|--------|-------------------------------------------------|----------|
+| `single_id`        | String | The single ID of the taxpayer.                  | Yes      |
+| `tin`              | String | The taxpayer identification number (TIN).       | Yes      |
+| `company_name_en`  | String | The company name in English.                    | Yes      |
+| `company_name_kh`  | String | The company name in Khmer (Cambodian language). | Yes      |
 
-### HTTP Status 200 (OK)
+### Response
+
+**HTTP Status 200 (OK)**
 
 ```json
 {
@@ -40,14 +42,16 @@ Bearer token authentication is required with the access token provided.
 }
 ```
 
-| Field     | Description                                              |
-|-----------|----------------------------------------------------------|
-| `is_valid`| A boolean indicating whether the taxpayer is valid or not.|
+**Response Fields**
 
-### HTTP Status 422 (Unprocessable Entity)
+| Field     | Description                                             |
+|-----------|---------------------------------------------------------|
+| `is_valid`| A boolean indicating whether the taxpayer is valid or not. |
+
+**HTTP Status 422 (Unprocessable Entity)**
+
 This response occurs when the provided data is missing or invalid.
 
-## Notes
+### Notes
 - Ensure the request body contains all required fields to validate the taxpayer information.
 - The endpoint checks the validity of the taxpayer based on the provided single ID, TIN, and company names.
-
