--- a/pages/invoice-structure/debit-note/accounting-supplier-party/party.mdx
+++ b/pages/invoice-structure/debit-note/accounting-supplier-party/party.mdx
@@ -21,35 +21,31 @@ The accounting supplier party.
 ## Example
 
 ```xml
-<cac:Party>
+  <cac:Party>
     <cbc:EndpointID>khuid00001234</cbc:EndpointID>
-    <cac:PartyName>
-        <cbc:Name>ក្រុមហ៊ុន ក</cbc:Name>
-    </cac:PartyName>
-    <cac:PostalAddress>
-        <cbc:ID schemeID="GLN" schemeAgencyID="9">1231412341324</cbc:ID>
-        <cbc:StreetName>Main street</cbc:StreetName>
-        <cbc:AdditionalStreetName>Suite 123</cbc:AdditionalStreetName>
-        <cbc:BuildingNumber>1</cbc:BuildingNumber>
-        <cbc:CityName>Phnom Penh</cbc:CityName>
-        <cbc:PostalZone>12100</cbc:PostalZone>
+      <cac:PartyName>
+        <cbc:Name>អង្ករបាត់ដំបង</cbc:Name>
+      </cac:PartyName>
+      <cac:PostalAddress>
+        <cbc:StreetName>Battambong</cbc:StreetName>
+        <cbc:CityName>Battambang</cbc:CityName>
         <cac:Country>
-            <cbc:IdentificationCode>KH</cbc:IdentificationCode>
+          <cbc:IdentificationCode>KH</cbc:IdentificationCode>
         </cac:Country>
-    </cac:PostalAddress>
-    <cac:PartyTaxScheme>
-        <cbc:CompanyID>DK12345</cbc:CompanyID>
+      </cac:PostalAddress>
+      <cac:PartyTaxScheme>
+        <cbc:CompanyID>K008-0000002</cbc:CompanyID>
         <cac:TaxScheme>
-            <cbc:ID>VAT</cbc:ID>
+          <cbc:ID>VAT</cbc:ID>
         </cac:TaxScheme>
-    </cac:PartyTaxScheme>
-    <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="en">Company Kor</cbc:RegistrationName>
-        <cbc:CompanyID>K001-123456789</cbc:CompanyID>
-    </cac:PartyLegalEntity>
-    <cac:Contact>
-        <cbc:Telephone>023123123</cbc:Telephone>
-        <cbc:ElectronicMail>sample@gmail.com</cbc:ElectronicMail>
-    </cac:Contact>
-</cac:Party>
+      </cac:PartyTaxScheme>
+      <cac:PartyLegalEntity>
+        <cbc:RegistrationName>Angkar Battambong</cbc:RegistrationName>
+        <cbc:CompanyID>0005000002</cbc:CompanyID>
+      </cac:PartyLegalEntity>
+      <cac:Contact>
+        <cbc:Telephone>+8550934534433</cbc:Telephone>
+        <cbc:ElectronicMail>angkar_battambong@gmail.com</cbc:ElectronicMail>
+      </cac:Contact>
+    </cac:Party>
 ```
