--- a/pages/invoice-structure/invoice/accounting-supplier-party.mdx
+++ b/pages/invoice-structure/invoice/accounting-supplier-party.mdx
@@ -11,9 +11,32 @@ Represents the accounting supplier party.
 
 ## Example
 ```xml
-<cac:AccountingSupplierParty>
+ <cac:AccountingSupplierParty>
     <cac:Party>
-        ...
+      <cac:PartyName>
+        <cbc:Name>អង្ករបាត់ដំបង</cbc:Name>
+      </cac:PartyName>
+      <cac:PostalAddress>
+        <cbc:StreetName>Battambong</cbc:StreetName>
+        <cbc:CityName>Battambang</cbc:CityName>
+        <cac:Country>
+          <cbc:IdentificationCode>KH</cbc:IdentificationCode>
+        </cac:Country>
+      </cac:PostalAddress>
+      <cac:PartyTaxScheme>
+        <cbc:CompanyID>K008-0000002</cbc:CompanyID>
+        <cac:TaxScheme>
+          <cbc:ID>VAT</cbc:ID>
+        </cac:TaxScheme>
+      </cac:PartyTaxScheme>
+      <cac:PartyLegalEntity>
+        <cbc:RegistrationName>Angkar Battambong</cbc:RegistrationName>
+        <cbc:CompanyID>0005000002</cbc:CompanyID>
+      </cac:PartyLegalEntity>
+      <cac:Contact>
+        <cbc:Telephone>+8550934534433</cbc:Telephone>
+        <cbc:ElectronicMail>angkar_battambong@gmail.com</cbc:ElectronicMail>
+      </cac:Contact>
     </cac:Party>
-</cac:AccountingSupplierParty>
+  </cac:AccountingSupplierParty>
 ```
