--- a/pages/api-reference/caminvoice-member-detail.mdx
+++ b/pages/api-reference/caminvoice-member-detail.mdx
@@ -5,7 +5,7 @@
 This endpoint is used to retrieve detailed information about a specific business identified by its Ministry of Commerce (MoC) ID.
 
 ```http
-GET {BaseURL}/api/v1/businesses/{moc_id}
+GET {BaseURL}/api/v1/business/{moc_id}
 Content-Type: application/json
 Authorization: Bearer {access_token}
 ```
