--- a/pages/api-reference/reject-document.mdx
+++ b/pages/api-reference/reject-document.mdx
@@ -8,7 +8,7 @@ POST {BaseURL}/api/v1/document/reject
 Content-Type: application/json
 Authorization: Bearer {access_token}
 {
-    "document_ids": [
+    "documents": [
         "df5dcf78-e78b-4396-87bb-2d2a44c1302e",
         "33444323-e78b-4396-87bb-234232344423",
         "24442432-e78b-4396-87bb-334553344533"
