--- a/pages/invoice-structure/invoice/accounting-customer-party.mdx
+++ b/pages/invoice-structure/invoice/accounting-customer-party.mdx
@@ -13,6 +13,7 @@ Represents the accounting customer party.
 ```xml
 <cac:AccountingCustomerParty>
     <cac:Party>
+      <cbc:EndpointID>KHUID00001234</cbc:EndpointID>
       <cac:PartyName>
         <cbc:Name>នំបុ័ងសៀមរាម</cbc:Name>
       </cac:PartyName>
