--- a/pages/invoice-structure/invoice/accounting-supplier-party.mdx
+++ b/pages/invoice-structure/invoice/accounting-supplier-party.mdx
@@ -13,6 +13,7 @@ Represents the accounting supplier party.
 ```xml
  <cac:AccountingSupplierParty>
     <cac:Party>
+      <cbc:EndpointID>KHUID00001234</cbc:EndpointID>
       <cac:PartyName>
         <cbc:Name>អង្ករបាត់ដំបង</cbc:Name>
       </cac:PartyName>
