--- a/pages/invoice-structure/invoice/accounting-supplier-party/party/endpoint-id.mdx
+++ b/pages/invoice-structure/invoice/accounting-supplier-party/party/endpoint-id.mdx
@@ -1,13 +1,13 @@
 # cbc:EndpointID
-An identifier for the end point of the routing service (e.g., MOC Single IDBCursor, VAT)
+The main identifier of this entity (CamInvoice ID). (e.g. KHUID00001234). 
 ## About
-* Occurence: [0..1]
+* Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
 
 ## Example 
 ```xml
-<cbc:EndpointID>khuid00001234</cbc:EndpointID>
+<cbc:EndpointID>KHUID00001234</cbc:EndpointID>
 ```
 
