Update api endpointsfor government and fix accept/reject document_ids

--- a/pages/api-reference/accept-document.mdx
+++ b/pages/api-reference/accept-document.mdx
@@ -26,13 +26,13 @@ Authorization: Bearer {access_token}
 
 | Field            | Type     | Description                          | Required |
 |------------------|----------|--------------------------------------|----------|
-| `document_ids`   | string[] | List of document IDs to be accepted. | Yes      |
+| `documents`   | string[] | List of document IDs to be accepted. | Yes      |
 
 ### Example Request Body
 
 ```json
 {
-    "document_ids": [
+    "documents": [
         "df5dcf78-e78b-4396-87bb-2d2a44c1302e",
         "33444323-e78b-4396-87bb-234232344423",
         "24442432-e78b-4396-87bb-334553344533"
