--- a/pages/api-reference/get-document-detail.mdx
+++ b/pages/api-reference/get-document-detail.mdx
@@ -30,11 +30,11 @@ Authorization: Bearer {access_token}
 {
     "document_id": "df5dcf78-e78b-4396-87bb-2d2a44c1302e",
     "document_number": "24030192110",
-    "supplier_id": "1010015172",
+    "supplier_id": "KHUID10015172",
     "supplier_company_name_kh": "នាសារ៉ាថ្មី ឯ.ក",
     "supplier_company_name_en": "NEASARANEW CO., LTD.",
     "supplier_vattin": "23144122",
-    "customer_id": "1010015172",
+    "customer_id": "KHUID10015172",
     "customer_company_name_en": "NEASARANEW CO., LTD.",
     "customer_company_name_kh": "នាសារ៉ាថ្មី ឯ.ក",
     "customer_vattin": "23144122",
