--- a/pages/api-reference/list-caminvoice-member.mdx
+++ b/pages/api-reference/list-caminvoice-member.mdx
@@ -1,4 +1,4 @@
-# CamInvoice Member List
+# List CamInvoice Member 
 
 ## Description
 This endpoint is used to list CamInvoice member information by searching for businesses.
@@ -29,6 +29,7 @@ Authorization: "Bearer {access_token}"
 Response Array of Business where Business field describe below
 | Field   | Description                                    |
 |---------|------------------------------------------------|
+| endpoint_id | The main identifier of an entity or CamInvoice ID |
 | moc_id  | A Ministry of Commerce's single ID |
 | company_name_en  | Name in English |
 | company_name_kh  | Name in Khmer |
