--- a/pages/getting-started/oauth2.mdx
+++ b/pages/getting-started/oauth2.mdx
@@ -128,6 +128,7 @@ Authorization: Basic base64encode({clientId:clientSecret})
 
 | Field                | Description                                                  |
 |----------------------|--------------------------------------------------------------|
+|`endpoint_id`         |  The main identifier of this entity (CamInvoice ID). (e.g. KHUID00001234). |
 | `moc_id`             | Ministry of Commerce ID, a unique identifier for the company |
 | `company_name_en`    | The official name of the company in English                  |
 | `company_name_kh`    | The official name of the company in Khmer                    |
