--- a/pages/invoice-structure/invoice.mdx
+++ b/pages/invoice-structure/invoice.mdx
@@ -46,6 +46,7 @@ Reference:
   <cbc:DocumentCurrencyCode>KHR</cbc:DocumentCurrencyCode>
   <cac:AccountingSupplierParty>
     <cac:Party>
+      <cbc:EndpointID>KHUID00001234</cbc:EndpointID>
       <cac:PartyName>
         <cbc:Name>អង្ករបាត់ដំបង</cbc:Name>
       </cac:PartyName>
@@ -74,11 +75,11 @@ Reference:
   </cac:AccountingSupplierParty>
   <cac:AccountingCustomerParty>
     <cac:Party>
+      <cbc:EndpointID>KHUID00001234</cbc:EndpointID>
       <cac:PartyName>
         <cbc:Name>នំបុ័ងសៀមរាម</cbc:Name>
       </cac:PartyName>
       <cac:PostalAddress>
-
         <cbc:StreetName>Siem Reap</cbc:StreetName>
         <cbc:CityName>Siem Reap</cbc:CityName>
         <cac:Country>
