--- a/pages/invoice-structure/debit-note.mdx
+++ b/pages/invoice-structure/debit-note.mdx
@@ -46,6 +46,7 @@ Reference:
   </cac:BillingReference>
   <cac:AccountingSupplierParty>
     <cac:Party>
+      <cbc:EndpointID>KHUID00001234</cbc:EndpointID>
       <cac:PartyName>
         <cbc:Name>អង្ករបាត់ដំបង</cbc:Name>
       </cac:PartyName>
@@ -74,6 +75,7 @@ Reference:
   </cac:AccountingSupplierParty>
   <cac:AccountingCustomerParty>
     <cac:Party>
+      <cbc:EndpointID>KHUID00001234</cbc:EndpointID>
       <cac:PartyName>
         <cbc:Name>នំបុ័ងសៀមរាម</cbc:Name>
       </cac:PartyName>
