update business list api

--- a/pages/api-reference/get-member-detail.mdx
+++ b/pages/api-reference/get-member-detail.mdx
@@ -52,7 +52,7 @@ Authorization: Bearer {access_token}
 | `moc_id`              | The unique identification number assigned to the company by the Ministry of Commerce. |
 | `company_name_en`     | The official name of the company in English.                          |
 | `company_name_kh`     | The official name of the company in Khmer.                            |
-| `tin`                 | The Tax Identification Number (TIN) of the company.                   |
+| `tin`                 | The Tax Identification Number (TIN) of an entity.                   |
 | `date_of_incorporation`| The date when the company was officially incorporated.                |
 | `city`                | The city where the company is located.                                |
 | `country`             | The country code where the company is located.                        |
