--- a/pages/api-reference/get-member-detail.mdx
+++ b/pages/api-reference/get-member-detail.mdx
@@ -49,17 +49,18 @@ Authorization: Bearer {access_token}
 | Field Name            | Description                                                           |
 |-----------------------|-----------------------------------------------------------------------|
 |`endpoint_id`          |  The main identifier of this entity (CamInvoice ID). (e.g. KHUID00001234). |
-| `moc_id`              | The unique identification number assigned to the company by the Ministry of Commerce. |
 | `company_name_en`     | The official name of the company in English.                          |
 | `company_name_kh`     | The official name of the company in Khmer.                            |
+| entity_type         | The type of an entity that can either be private(businesses) or public sector (government)           |
+| entity_id  | For business, this is the ID provided by the Ministry of Commerce. For government, this is their unique ID for their entity/department.|
 | `tin`                 | The Tax Identification Number (TIN) of an entity.                   |
 | `date_of_incorporation`| The date when the company was officially incorporated.                |
 | `city`                | The city where the company is located.                                |
 | `country`             | The country code where the company is located.                        |
 | `phone_number`        | The phone number of the company.                                      |
 | `email`               | The email address associated with the company.                        |
-| `entity_type  `       | The type of an entity that can either be private or public sector            |
-| `entity_id`           | The government budget entity ID if the organization is part of the government.|
+
+
 
 **HTTP Status 404 (Not Found)**
 
