small grammar changes

--- a/pages/api-reference/get-member-detail.mdx
+++ b/pages/api-reference/get-member-detail.mdx
@@ -52,7 +52,7 @@ Authorization: Bearer {access_token}
 | `company_name_en`     | The official name of the company in English.                          |
 | `company_name_kh`     | The official name of the company in Khmer.                            |
 | entity_type         | The type of an entity that can either be private(businesses) or public sector (government)           |
-| entity_id  | For business, this is the ID provided by the Ministry of Commerce. For government, this is their unique ID for their entity/department.|
+| entity_id  | For business, this is the unique ID provided by the Ministry of Commerce. For the government, this is their unique ID for their entity/department.|
 | `tin`                 | The Tax Identification Number (TIN) of an entity.                   |
 | `date_of_incorporation`| The date when the company was officially incorporated.                |
 | `city`                | The city where the company is located.                                |
