--- a/pages/api-reference/list-caminvoice-member.mdx
+++ b/pages/api-reference/list-caminvoice-member.mdx
@@ -30,7 +30,7 @@ Response Array of Business where Business field describe below
 | Field   | Description                                    |
 |---------|------------------------------------------------|
 | endpoint_id | The main identifier of an entity or CamInvoice ID |
-| entity_id  | For business, this is the ID provided by the Ministry of Commerce. For government, this is their unique ID for their entity/department.|
+| entity_id  | For business, this is the unique ID provided by the Ministry of Commerce. For the government, this is their unique ID for their entity/department.|
 | tin        | The Tax Identification Number (TIN) of an entity.                   |
 | company_name_en  | Entity Name in English |
 | company_name_kh  | Entity Name in Khmer |
