--- a/pages/api-reference/get-member-detail.mdx
+++ b/pages/api-reference/get-member-detail.mdx
@@ -29,17 +29,17 @@ Authorization: Bearer {access_token}
 ```json
 {
   "endpoint_id": "KHUID00001324",
-  "moc_id": "033423",
   "company_name_en": "Expresso Co ltd",
   "company_name_kh": "អុិចសប្រេសូ",
+  "entity_type": "PRIVATE_SECTOR",
+  "entity_id": "000001234",
   "tin": "K001-3333333",
   "date_of_incorporation": null,
-  "entity_type": 'PRIVATE_SECTOR',
   "city": "Phnom Penh",
   "country": "KH",
   "phone_number": "+85544433422",
   "email": "johndoe@mail.com",
-  "entity_id": null
+  
 }
 ```
 
