[chore] Update on Receive Update Event Section regarding webhook and polling

--- a/pages/api-reference/authentication.mdx
+++ b/pages/api-reference/authentication.mdx
@@ -10,7 +10,7 @@ import {Callout, Bleed} from 'nextra-theme-docs'
 ```http
 POST {BaseURL}/api/v1/auth/token
 Content-Type: application/json
-Authorization: Basic encoded({ClientId:clientSecret})
+Authorization: Basic base64encode({clientId:clientSecret})
 {
   "refresh_token": "{refreshToken}"
 }
