--- a/pages/invoice-structure/credit-note/legal-monetary-total/payable-amount.mdx
+++ b/pages/invoice-structure/credit-note/legal-monetary-total/payable-amount.mdx
@@ -1,6 +1,7 @@
-# cbc:TaxExclusiveAmount
 
-The monetary amount of an extended transaction line, exclusive of taxes.
+# cbc:PayableAmount
+
+The amount of the monetary total to be paid.
 
 ## About
 
@@ -16,4 +17,4 @@ The monetary amount of an extended transaction line, exclusive of taxes.
 ## Example
 
 ```xml
-<cbc:TaxExclusiveAmount currencyID="USD">80.00</cbc:TaxExclusiveAmount>
+<cbc:PayableAmount currencyID="USD">150.00</cbc:PayableAmount>
