--- a/pages/invoice-structure/credit-note/legal-monetary-total/prepaid-amount.mdx
+++ b/pages/invoice-structure/credit-note/legal-monetary-total/prepaid-amount.mdx
@@ -1,10 +1,11 @@
-# cbc:TaxExclusiveAmount
 
-The monetary amount of an extended transaction line, exclusive of taxes.
+# cbc:PrepaidAmount
+
+The total prepaid monetary amount.
 
 ## About
 
-- Occurrence: [1..1]
+- Occurrence: [0..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
@@ -16,4 +17,4 @@ The monetary amount of an extended transaction line, exclusive of taxes.
 ## Example
 
 ```xml
-<cbc:TaxExclusiveAmount currencyID="USD">80.00</cbc:TaxExclusiveAmount>
+<cbc:PrepaidAmount currencyID="USD">50.00</cbc:PrepaidAmount>
